# git-repo-mcp

./: README.md  pyproject.toml
src/git_repo_mcp/: client.py  server.py
