[project]
name = "git-repo-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aravindh", email = " }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.0",
    "gitpython>=3.1.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
